# penelope

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build-docker.sh  penelope.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  version-release.yml
extras/: exploit_bind.py  exploit_reverse.py  ligolo-setup.sh  penelope.conf  peneloperc  upgrade-bash.sh
extras/exploit_examples/: README.md  exploit_bind.py  exploit_reverse.py  exploit_socket_reuse.py
penelope/: penelope.py
penelope/extras/: tty_upgrade.sh
penelope_mod/: __init__.py  buffer.py  constants.py  context.py  core.py  exceptions.py  fileserver.py  io.py  menu.py  messaging.py  network.py  session.py  system.py  ui.py
penelope_mod/plugins/: __init__.py  base.py  linux_procmemdump.py  linuxexploitsuggester.py  lse.py  meterpreter.py  ngrok.py  peass_ng.py  uac.py  upload_privesc_scripts.py
tests/: test_core.py  test_penelope.py
