[build-system]
  requires = ["setuptools"]
  build-backend = "setuptools.build_meta"

[project]
  name = "penelope"
  dynamic = ["version"]
  requires-python = ">=3.6"

[project.scripts]
  penelope = "penelope:penelope.main"

[tool.setuptools]
  packages = ["penelope"]

[tool.setuptools.dynamic]
  version = {attr = "penelope.penelope.__version__"}

[tool.setuptools.package-data]
  penelope = ["extras/*"]
